Refactor Web UI Javascript into separate files
This will simplify further maintainance. Instead of a single large file,
there are now separate files for each models, api, utils, and constants.
There are also separate files for all Scenes.

There are no functional changes in this patch.

--- a/radicale/web/internal_data/index.html
+++ b/radicale/web/internal_data/index.html
@@ -14,7 +14,7 @@
     <link href="css/main.css" type="text/css" media="screen" rel="stylesheet">
     <link href="css/icon.png" type="image/png" rel="icon">
     <style>.hidden {display: none !important;}</style>
-    <script src="fn.js"></script>
+    <script type="module" src="main.js"></script>
   </head>
 
   <body>
